--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,14 @@
 language: python
 
-env:
-  - PYPY="2.7" PKG="numpy"
-  - PYPY="3.5" PKG="numpy"
-  - PYPY="2.7" PKG="scipy"
-  - PYPY="3.5" PKG="scipy"
+jobs:
+  include:
+    - env:
+      - PYPY="2.7"
+      - PYPY="3.5"
+
+    - env:
+      - PKG="numpy"
+      - PKG="scipy"
   
 script:
   - echo "hello world"
