--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,29 @@
-language: minimal
+tsudo: false
+language: python
 
-stages:
-  - docker-image
-  - wheels
-  - build-index
-
-stage: wheels
-
-env:
-  - PYPY="2.7"
-  - PYPY="3.5"
-  - PYPY="3.6"
-
-script:
-  - echo "pypy = $PYPY"
-
-
-  
-jobs:
+matrix:
+  fast_finish: true
   include:
-    - stage: docker-image
-      script:
-        - echo "docker build"
+    - python: '2.7'
 
-    - stage: build-index
+    - stage: deploy
+      sudo: required
+      services:
+        - docker
+      env: DOCKER_IMAGE=quay.io/pypa/manylinux1_x86_64
+      install:
+        - docker pull $DOCKER_IMAGE
       script:
-        - echo "build index"
+        - docker image ls $DOCKER_IMAGE
+        - docker run --rm -v `pwd`:/foo $DOCKER_IMAGE /foo/build-wheels.sh
 
-        
+cache:
+  pip: true
+
+addons:
+  apt:
+    packages:
+      - python-dev
+
+
+stage: test
